# django-covid

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pre_commit.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  uwsgi.ini
covid19/: settings.py  urls.py
covid19/covid19/: settings.py  urls.py
covid19/covid19/utils/scraper/: worldmeter.py
covid19/stats/: admin.py  models.py  serializers.py  urls.py  views.py
covid19/utils/scraper/: worldmeter.py
stats/: models.py  serializers.py  urls.py  views.py
stats/management/commands/: fetchstats.py
stats/migrations/: 0001_initial.py
tests/: conftest.py  test_stats.py
