[tool.poetry]
name = "django-covid"
version = "0.1.0"
description = "covid19 backend"
authors = ["Marcin Sedrowski <m.sedrowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django-rest-framework = "^0.1.0"
django = "^3.0.5"
pandas = "^1.0.3"
lxml = "^4.5.0"
psycopg2-binary = "^2.8.5"
Faker = "^4.0.3"
requests = "^2.23.0"
uwsgi = {version = "^2.0.18", optional = true}

[tool.poetry.extras]
uwsgi = ["uwsgi"]

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
isort = "^4.3.21"
yapf = "^0.29.0"
mypy = "^0.770"
pytest-isort = "^0.3.1"
pytest-django = "^3.9.0"
pytest-flake8 = "^1.0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
